--- a/acknowledge.tex
+++ b/acknowledge.tex
@@ -1,10 +1,17 @@
+% !TEX root = proj_report_outline.tex
 \chapter*{Acknowledgments}\label{C:ack} 
-Any acknowledgments should go 
-in here, between the title page and the table of contents.  The 
-acknowledgments do not form a proper chapter, and so don't get a 
-number or appear in the table of contents.
 
+Firstly I would like to thank my supervisors David and Marcus for a constant stream of ideas and making it
+possible to pull this project together into a coherent whole.
+Also Alex Telfar, for valuable discussions which were sometimes even on topic and
+Harry Ross, for occasionally entering the firing line when I felt the urge to try and explain something.
 
-\hl{WHO??}
+I would also thank the School of Engineering and Computer Science for essential computational resources 
+ as well as
+everyone working in Cotton 240 for being relaxed, friendly and
+not wiping my notes off the whiteboard.
 
-%Andrej Karpathy, for generously ``lending'' a figure.
+I am grateful to Jack Branthwaite for all the coffee, the impact of which can not be understated. Also
+Timothy Barraclough for giving me plenty of motivation
+and my indoor cricket team the Caged Sharks for giving me an
+opportunity to run around in circles for a few hours a week.
