--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -1,32 +1,31 @@
 % !TEX root = ../proj_report_outline.tex
 \chapter{Introduction}\label{C:intro}
 Recurrent Neural Networks (RNNs) are powerful machine learning models for learning mappings between
-pairs of sequences. Such tasks are typically highly challenging and include language modelling,
+pairs of sequences. Such tasks are highly challenging and include language modelling,
 machine translation, speech recognition and audio classification. They have achieved remarkable
 success at immense scale \autocite{Wu2016a}, but the most successful architectures are
-opaque and poorly understood while simple alternatives tend to have serious
-issues \autocite{Bengio1994}. Understanding how RNNs are able to
+complicated and poorly understood while simple alternatives tend to perform badly \autocite{Bengio1994}. Understanding how RNNs 
 solve complex tasks and designing new, simpler architectures that are well-understood from the
 outset is an important goal.
 
 RNNs make computations at each step of the input sequence based on the current input value and
-a fixed size vector of hidden states. At each step a new state is produced and passed forward allowing
-the network to model complex temporal dynamics. 
-The most successful architectures have two key components to this computation:
-additive state updates and multiplicative gating. The former allows easy integration of new information
+a fixed size vector of hidden states. At each step these states are updated and passed forward which enables
+the network to model complex temporal dynamics using the hidden states as a working memory. 
+The most successful architectures have two key ingredients:
+additive state updates and multiplicative gating. The former allows running integration of new information
 at each time step while the latter provides the ability to selectively ignore irrelevancies. 
 
 Multiplicative gating involves computing element-wise products of vectors. We can
-generalise this as computing a product involving a three-way tensor of weights, termed
+generalise this by computing a product involving a three-way tensor of weights, termed
 a bilinear product. Looking to understand and generalise the structures prevalent in
-existing RNNs we investigate in detail the properties of the bilinear product. 
+existing RNNs, we investigate the properties of the bilinear product in detail. 
 This leads to the remarkable
 result, expressed in theorem~\ref{thm:xor}, that these bilinear products operate on the exclusive-or
 of features. The implications of this are clear and strong -- bilinear products operate
-implicitly at a higher level than the standard linear operations composed to form neural networks.
+at a higher level than the standard linear operations composed to form neural networks.
 
-The downside of these tensor products is that using them explicitly requires storing the tensor which
-can be very large. We therefore look to the multi-linear algebra literature to investigate methods of
+The downside of these tensor products is that using them explicitly requires storing a very large tensor.
+We therefore look to the multi-linear algebra literature to investigate methods of
 tensor decomposition. Finding a useful decomposition would allow us to incorporate this highly expressive
 tensor product in a neural network with a feasible number of parameters. We find that the simplest
 decomposition, CANDECOMP/PARAFAC \autocite{Carroll1970, Harshman1970}, fulfils our criteria
@@ -36,19 +35,18 @@ Equipped with this tensor decomposition we propose two new classes of RNNs: the 
 Multiplicative RNN (GMR) and the Tensor Gate Unit (TGU).
 The GMR is a very simple way to incorporate a tensor into a neural network and generalises a number of
 recently proposed architectures \autocite{Martens2011a, Wu2016}. The TGU includes an
-additive state update and standard multiplicative gates in addition to the bilinear product. 
-This architecture is based on the observation that the gate is the most important part of the architecture
-and that if we ensure it is sufficiently expressive, we can remove a number of other dependencies. This
+additive state update and standard multiplicative gates as well as the bilinear product. 
+This architecture is based on the observation that the gate is the most important part of such an architecture
+and that if it is sufficiently expressive, other components of the network can be simplified. This
 results in a unique, clearly defined architecture with full expressive power and a minimum of extraneous
 components.
 
-These architectures are then evaluated empirically. We consider standard synthetic tasks and achieve
-excellent results including successfully training a TGU to capture time dependencies up to 10,000 steps,
-more than 10 times the best previously reported. None of the synthetic tasks common in the
-literature adequately exercise the ability of the model to store and retrieve arbitrary patterns.
-As this is an essential task for solving many complex problems we propose a novel synthetic
-form of \emph{variable binding} which tests the ability of the models to use their hidden units in this
-fashion.
+These architectures are then evaluated empirically. We achieve
+excellent results on synthetic tasks
+including successfully training a TGU to capture time dependencies up to 10,000 steps,
+more than 10 times the longest previously reported. To evaluate the ability of the model to carefully
+write arbitrary patterns to its memory we propose a novel form of \emph{variable binding} as no
+satisfactory task was present in the literature.
 
 Finally, we demonstrate that our proposed RNNs are highly competitive with the best existing techniques
 on real world data. In doing so, we investigate the hypothesis that controlling the rank of the tensor
